...
    "description": "Message for a NOT successful candidate register"
  },
  "registerOkMessage": "Account created successfully! please login with your email and password",
  "@registerOkMessage": {
    "description": "Message for a successful register"
  },
  "testListTitle": "Assigned Tests",
  "@testListTitle": {
    "description": "Title of the assigned tests list"
  },
  "testListSubtitle": "Please check all the pending assigned tasks schedule",
  "@testListSubtitle": {
    "description": "Additional instructions for checking assigned tasks"
...
