...
                  ),
                ),
                SizedBox(
                  height: 40,
                  width: 300,
                  child: ElevatedButton(
                      key: Key("_btnAutenticarCandidato"),
                      style: ElevatedButton.styleFrom(
                        primary: HexColor("95CCFF"), // background
                        onPrimary: Colors.white, // foreground
                      ),
                      onPressed: () async {
                        await cerrarSesion();
...
                ),
                SizedBox(height: 40),
                SizedBox(
                  height: 40,
                  width: 300,
                  child: ElevatedButton(
                      key: Key("_btnIrARegistrarCandidato"),
                      onPressed: () {
                        Navigator.push(
                          context,
                          MaterialPageRoute(
                              builder: (context) => const RegisterPage()),
                        );
...
